--- a/home.html
+++ b/home.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Home</title>
-    <link rel="stylesheet" href="css/common.css">
-    <link rel="stylesheet" href="css/home.css">
+    <link rel="stylesheet" href="https://seoyeonIm.github.io/infovis/css/common.css">
+    <link rel="stylesheet" href="https://seoyeonIm.github.io/infovis/css/home.css">
 </head>
 <body>
 
