--- a/artist_home.html
+++ b/artist_home.html
@@ -3,8 +3,8 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="css/common.css" />
-    <link rel="stylesheet" href="./css/artist_home.css" />
+    <link rel="stylesheet" href="https://seoyeonIm.github.io/infovis/css/common.css" />
+    <link rel="stylesheet" href="https://seoyeonIm.github.io/infovis/css/artist_home.css" />
     <link
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css"
       rel="stylesheet"
@@ -35,7 +35,7 @@
           <div class="section-content">
             <div class="section-icon"></div>
             <h2 class="section-title">시기별<br />활동작가</h2>
-            <a href="./artist_timeline.html" class="details-button"
+            <a href="https://seoyeonIm.github.io/infovis/artist_timeline.html" class="details-button"
               >자세히 보기</a
             >
           </div>
@@ -46,7 +46,7 @@
           <div class="section-content">
             <div class="section-icon"></div>
             <h2 class="section-title">장소별<br />활동작가</h2>
-            <a href="./artist_place.html" class="details-button">자세히 보기</a>
+            <a href="https://seoyeonIm.github.io/infovis/artist_place.html" class="details-button">자세히 보기</a>
           </div>
         </div>
 
@@ -55,14 +55,14 @@
           <div class="section-content">
             <div class="section-icon"></div>
             <h2 class="section-title">화법·화풍별<br />활동작가</h2>
-            <a href="./artist_relationship.html" class="details-button"
+            <a href="https://seoyeonIm.github.io/infovis/artist_relationship.html" class="details-button"
               >자세히 보기</a
             >
           </div>
           <a href="javascript:history.back()" class="back-button">
             <i class="fas fa-arrow-left"></i>
           </a>
-          <a href="★★★★home.html" class="home-button">
+          <a href="https://seoyeonIm.github.io/infovis/home.html" class="home-button">
             <i class="fas fa-home"></i>
           </a>
         </div>
