--- a/artist_popup.html
+++ b/artist_popup.html
@@ -5,14 +5,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>심사정</title>
     <!-- Sigma.js 라이브러리 (ES 모듈) -->
-    <link rel="stylesheet" href="css/common.css" />
-    <link rel="stylesheet" href="/css/artist_detail.css" />
+    <link rel="stylesheet" href="https://seoyeonIm.github.io/infoviscss/common.css" />
+    <link rel="stylesheet" href="https://seoyeonIm.github.io/infovis/css/artist_detail.css" />
     <script src="/js/artist_popup.js" defer></script>
     <script src="https://d3js.org/d3.v7.min.js"></script>
 
     <!-- 관계 그래프 스크립트 -->
-    <script type="module" src="/js/artist_relationship.js" defer></script>
-    <script type="module" src="/js/load_images.js" defer></script>
+    <script type="module" src="https://seoyeonIm.github.io/infovis/js/artist_relationship.js" defer></script>
+    <script type="module" src="https://seoyeonIm.github.io/infovis/js/load_images.js" defer></script>
   </head>
   <body>
     <div class="popup-container">
