--- a/artist_relationship.html
+++ b/artist_relationship.html
@@ -4,13 +4,13 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>화법·화풍별 활동작가</title>
-    <link rel="stylesheet" href="css/common.css" />
-    <link rel="stylesheet" href="/css/artist_relationship.css" />
+    <link rel="stylesheet" href="https://seoyeonIm.github.io/infoviscss/common.css" />
+    <link rel="stylesheet" href="https://seoyeonIm.github.io/infovis/css/artist_relationship.css" />
     <link
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css"
       rel="stylesheet"
     />
-    <script type="module" src="/js/artist_rel.js"></script>
+    <script type="module" src="https://seoyeonIm.github.io/infovis/js/artist_rel.js"></script>
   </head>
   <body>
     <div class="artist-home">
@@ -77,7 +77,7 @@
       <a href="javascript:history.back()" class="back-button">
         <i class="fas fa-arrow-left"></i>
       </a>
-      <a href="★★★★home.html" class="home-button">
+      <a href="https://seoyeonIm.github.io/infovis/home.html" class="home-button">
         <i class="fas fa-home"></i>
       </a>
     </div>
