--- a/artist_timeline.html
+++ b/artist_timeline.html
@@ -3,10 +3,10 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="css/common.css" />
-    <link rel="stylesheet" href="./css/artist_timeline.css" />
+    <link rel="stylesheet" href="https://seoyeonIm.github.io/infovis/css/common.css" />
+    <link rel="stylesheet" href="https://seoyeonIm.github.io/infovis/css/artist_timeline.css" />
     <script src="https://d3js.org/d3.v7.min.js"></script>
-    <script type="module" src="/js/timeline.js"></script>
+    <script type="module" src="https://seoyeonIm.github.io/infovis/js/timeline.js"></script>
     <link
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css"
       rel="stylesheet"
@@ -46,7 +46,7 @@
     <a href="javascript:history.back()" class="back-button">
       <i class="fas fa-arrow-left"></i>
     </a>
-    <a href="★★★★home.html" class="home-button">
+    <a href="https://seoyeonIm.github.io/infovis/home.html" class="home-button">
       <i class="fas fa-home"></i>
     </a>
 
@@ -54,7 +54,7 @@
       import { createTimeline } from "/js/timeline.js";
 
       // 타임라인 생성
-      createTimeline("timeline-container", "/js/timeline.json");
+      createTimeline("timeline-container", "https://seoyeonIm.github.io/infovis/js/timeline.json");
     </script>
   </body>
 </html>
