--- a/artwork_home.html
+++ b/artwork_home.html
@@ -4,8 +4,8 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>남종화풍 탐색</title>
-  <link rel="stylesheet" href="css/common.css">
-  <link rel="stylesheet" href="./css/artwork_home.css">
+  <link rel="stylesheet" href="https://seoyeonIm.github.io/infoviscss/common.css">
+  <link rel="stylesheet" href="https://seoyeonIm.github.io/infovis/css/artwork_home.css">
   <link
   href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css"
   rel="stylesheet"
@@ -34,7 +34,7 @@
         <div class="section-content">
           <div class="section-icon"></div>
           <h2 class="section-title">남종화풍 작가의<br>작품유형</h2>
-          <a href="artwork_type.html" class="details-button">자세히 보기</a>
+          <a href="https://seoyeonIm.github.io/infovis/artwork_type.html" class="details-button">자세히 보기</a>
         </div>
       </div>
       
@@ -43,12 +43,12 @@
         <div class="section-content">
           <div class="section-icon"></div>
           <h2 class="section-title">남종화풍 작가의<br>작품 속 문양</h2>
-          <a href="artwork_pattern.html" class="details-button">자세히 보기</a>
+          <a href="https://seoyeonIm.github.io/infovis/artwork_pattern.html" class="details-button">자세히 보기</a>
         </div>
         <a href="javascript:history.back()" class="back-button">
           <i class="fas fa-arrow-left"></i>
         </a>
-        <a href="★★★★home.html" class="home-button">
+        <a href="https://seoyeonIm.github.io/infovis/home.html" class="home-button">
           <i class="fas fa-home"></i>
         </a>
       </div>
