--- a/artwork_pattern.html
+++ b/artwork_pattern.html
@@ -4,9 +4,9 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <script src="https://d3js.org/d3.v7.min.js"></script>
-  <link rel="stylesheet" href="css/common.css">
-  <script type="module" src="./js/artwork_pattern.js" defer></script>
-  <link rel="stylesheet" href="./css/artwork_pattern.css" />
+  <link rel="stylesheet" href="https://seoyeonIm.github.io/infovis/css/common.css">
+  <script type="module" src="https://seoyeonIm.github.io/infovis/js/artwork_pattern.js" defer></script>
+  <link rel="stylesheet" href="https://seoyeonIm.github.io/infovis/css/artwork_pattern.css" />
   <link
   href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css"
   rel="stylesheet"
@@ -46,7 +46,7 @@
             <a href="javascript:history.back()" class="back-button">
               <i class="fas fa-arrow-left"></i>
             </a>
-            <a href="★★★★home.html" class="home-button">
+            <a href="https://seoyeonIm.github.io/infovis/home.html" class="home-button">
               <i class="fas fa-home"></i>
             </a>
         </div>
