--- a/artist_home.html
+++ b/artist_home.html
@@ -3,8 +3,8 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="https://seoyeonIm.github.io/infovis/css/common.css" />
-    <link rel="stylesheet" href="https://seoyeonIm.github.io/infovis/css/artist_home.css" />
+    <link rel="stylesheet" href="https://raw.githubusercontent.com/seoyeonIm/infovis/main/css/common.css" />
+    <link rel="stylesheet" href="https://raw.githubusercontent.com/seoyeonIm/infovis/main/css/artist_home.css" />
     <link
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css"
       rel="stylesheet"
