--- a/artist_place.html
+++ b/artist_place.html
@@ -3,8 +3,8 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="https://seoyeonIm.github.io/infovis/css/common.css" />
-    <link rel="stylesheet" href="https://seoyeonIm.github.io/infovis/css/artist_place.css" />
+    <link rel="stylesheet" href="https://raw.githubusercontent.com/seoyeonIm/infovis/main/css/common.css" />
+    <link rel="stylesheet" href="https://raw.githubusercontent.com/seoyeonIm/infovis/main/css/artist_place.css" />
     <link rel="stylesheet" href="https://unpkg.com/leaflet/dist/leaflet.css" />
     <link
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css"
@@ -14,8 +14,8 @@
     <!-- Leaflet JS -->
     <script src="https://d3js.org/d3.v7.min.js"></script>
     <!-- D3.js -->
-    <script src="https://seoyeonIm.github.io/infovis/js/map_interaction.js" type="module" defer></script>
-    <script type="module" src="https://seoyeonIm.github.io/infovis/js/filtered_graph_bottom.js" defer></script>
+    <script src="https://raw.githubusercontent.com/seoyeonIm/infovis/main/js/map_interaction.js" type="module" defer></script>
+    <script type="module" src="https://raw.githubusercontent.com/seoyeonIm/infovis/main/js/filtered_graph_bottom.js" defer></script>
     <title>작가의 활동지역</title>
     <style>
       #map {
