--- a/artwork_home.html
+++ b/artwork_home.html
@@ -4,8 +4,8 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>남종화풍 탐색</title>
-  <link rel="stylesheet" href="https://seoyeonIm.github.io/infoviscss/common.css">
-  <link rel="stylesheet" href="https://seoyeonIm.github.io/infovis/css/artwork_home.css">
+  <link rel="stylesheet" href="https://raw.githubusercontent.com/seoyeonIm/infovis/main/css/common.css">
+  <link rel="stylesheet" href="https://raw.githubusercontent.com/seoyeonIm/infovis/main/css/artwork_home.css">
   <link
   href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css"
   rel="stylesheet"
