--- a/artwork_type.html
+++ b/artwork_type.html
@@ -4,9 +4,9 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <script src="https://d3js.org/d3.v7.min.js"></script>
-  <link rel="stylesheet" href="https://seoyeonIm.github.io/infoviscss/common.css">
-  <script type="module" src="https://seoyeonIm.github.io/infovis/js/artwork_type.js" defer></script>
-  <link rel="stylesheet" href="https://seoyeonIm.github.io/infovis/css/artwork_type.css" />
+  <link rel="stylesheet" href="https://raw.githubusercontent.com/seoyeonIm/infovis/main/css/common.css">
+  <script type="module" src="https://raw.githubusercontent.com/seoyeonIm/infovis/main/js/artwork_type.js" defer></script>
+  <link rel="stylesheet" href="https://raw.githubusercontent.com/seoyeonIm/infovis/main/css/artwork_type.css" />
   <link
   href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css"
   rel="stylesheet"
